--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather Dashboard</title>
+    <script
+      src="https://kit.fontawesome.com/ae0443040c.js"
+      crossorigin="anonymous"
+    ></script>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -14,6 +18,38 @@
     <link href="assets/css/styles.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
+    <header class="navbar-brand">
+      <div class="display-1 text-center">Weather Dashboard</div>
+    </header>
+    <main class="container-fluid">
+      <div class="row main-row">
+        <div class="h-100 col-3" id="sidebar-col">
+          <div class="input-group mb-3 mt-3">
+            <input
+              type="text"
+              class="form-control"
+              placeholder="Search for a city"
+              aria-label="Search for a city"
+              aria-describedby="button-addon2"
+              id="city-input"
+            />
+            <button
+              class="btn btn-outline-secondary"
+              type="button"
+              id="button-addon2"
+            >
+              <i class="fas fa-search"></i>
+            </button>
+          </div>
+          <div id="search-history-div"></div>
+        </div>
+        <div class="h-100 col-9" id="forecast-col">
+          <div id="current-weather"></div>
+          <div id="5-day-weather"></div>
+        </div>
+      </div>
+    </main>
+
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.js"
       integrity="sha512-n/4gHW3atM3QqRcbCn6ewmpxcLAHGaDjpEBu4xZd47N0W2oQ+6q7oc3PXstrJYXcbNU1OHdQ1T7pAP+gi5Yu8g=="
