--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
     <main class="container-fluid">
       <div class="row main-row">
         <div class="h-100 col-3" id="sidebar-col">
-          <form id="city-form">
+          <form id="cityForm">
             <div class="input-group mb-3 mt-3">
               <input
                 type="city-input"
                 class="form-control"
-                id="city-input"
+                id="cityInput"
                 aria-describedby="city-input"
                 placeholder="Search for a city"
               />
@@ -39,7 +39,13 @@
             </div>
           </form>
 
-          <div id="search-history-div"></div>
+          <ul class="list-group list-group-flush" id="searchHistoryDiv">
+            <li class="list-group-item">An item</li>
+            <li class="list-group-item">A second item</li>
+            <li class="list-group-item">A third item</li>
+            <li class="list-group-item">A fourth item</li>
+            <li class="list-group-item">And a fifth one</li>
+          </ul>
         </div>
         <div class="h-100 col-9" id="forecast-col">
           <div id="current-weather"></div>
