--- a/index.html
+++ b/index.html
@@ -39,13 +39,7 @@
             </div>
           </form>
 
-          <ul class="list-group list-group-flush" id="searchHistoryDiv">
-            <li class="list-group-item">An item</li>
-            <li class="list-group-item">A second item</li>
-            <li class="list-group-item">A third item</li>
-            <li class="list-group-item">A fourth item</li>
-            <li class="list-group-item">And a fifth one</li>
-          </ul>
+          <ul class="list-group list-group-flush" id="searchHistoryDiv"></ul>
         </div>
         <div class="h-100 col-9" id="forecast-col">
           <div id="current-weather"></div>
