updated static html

--- a/index.html
+++ b/index.html
@@ -52,51 +52,50 @@
             <div id="windSpeed">Wind Speed:</div>
             <div id="uv">UV Index:</div>
           </div>
-          <div class="row fs-2 fw-bold px-3 pt-2 future-weather">
-            5 Day Forecast:
-          </div>
-          <div
-            class="row row-cols-5 h-50 pt-4 future-weather"
-            id="future-weather"
-          >
-            <div class="col">
-              <div class="card">
-                <h5 class="card-title" id="futureDate">Date</h5>
-                <div id="futureWeatherIcon">Icon</div>
-                <div id="futureTemp">Temp:</div>
-                <div id="futureHumidity">Humidity:</div>
+          <div class="row h-50 pt-4 future-weather" id="future-weather">
+            <h2 class="row p-0 m-0 fw-bold forecast-heading">
+              5 Day Forecast:
+            </h2>
+            <div class="row row-cols-5">
+              <div class="col">
+                <div class="card">
+                  <h5 class="card-title" id="futureDate">Date</h5>
+                  <div id="futureWeatherIcon">Icon</div>
+                  <div id="futureTemp">Temp:</div>
+                  <div id="futureHumidity">Humidity:</div>
+                </div>
               </div>
-            </div>
-            <div class="col">
-              <div class="card">
-                <h5 class="card-title" id="futureDate">Date</h5>
-                <div id="futureWeatherIcon">Icon</div>
-                <div id="futureTemp">Temp:</div>
-                <div id="futureHumidity">Humidity:</div>
+              <div class="col">
+                <div class="card">
+                  <h5 class="card-title" id="futureDate">Date</h5>
+                  <div id="futureWeatherIcon">Icon</div>
+                  <div id="futureTemp">Temp:</div>
+                  <div id="futureHumidity">Humidity:</div>
+                </div>
               </div>
-            </div>
-            <div class="col">
-              <div class="card">
-                <h5 class="card-title" id="futureDate">Date</h5>
-                <div id="futureWeatherIcon">Icon</div>
-                <div id="futureTemp">Temp:</div>
-                <div id="futureHumidity">Humidity:</div>
+              <div class="col">
+                <div class="card">
+                  <h5 class="card-title" id="futureDate">Date</h5>
+                  <div id="futureWeatherIcon">Icon</div>
+                  <div id="futureTemp">Temp:</div>
+                  <div id="futureHumidity">Humidity:</div>
+                </div>
               </div>
-            </div>
-            <div class="col">
-              <div class="card">
-                <h5 class="card-title" id="futureDate">Date</h5>
-                <div id="futureWeatherIcon">Icon</div>
-                <div id="futureTemp">Temp:</div>
-                <div id="futureHumidity">Humidity:</div>
+              <div class="col">
+                <div class="card">
+                  <h5 class="card-title" id="futureDate">Date</h5>
+                  <div id="futureWeatherIcon">Icon</div>
+                  <div id="futureTemp">Temp:</div>
+                  <div id="futureHumidity">Humidity:</div>
+                </div>
               </div>
-            </div>
-            <div class="col">
-              <div class="card">
-                <h5 class="card-title" id="futureDate">Date</h5>
-                <div id="futureWeatherIcon">Icon</div>
-                <div id="futureTemp">Temp:</div>
-                <div id="futureHumidity">Humidity:</div>
+              <div class="col">
+                <div class="card">
+                  <h5 class="card-title" id="futureDate">Date</h5>
+                  <div id="futureWeatherIcon">Icon</div>
+                  <div id="futureTemp">Temp:</div>
+                  <div id="futureHumidity">Humidity:</div>
+                </div>
               </div>
             </div>
           </div>
