added js to build current weather card

--- a/index.html
+++ b/index.html
@@ -42,16 +42,8 @@
           <ul class="list-group list-group-flush" id="searchHistoryDiv"></ul>
         </div>
         <div class="h-100 col-9" id="forecast-col">
-          <div class="row h-50 current-weather" id="current-weather">
-            <h2 class="mt-4" id="cityName">
-              cityName <span id="currentDate">currentDate </span
-              ><span id="weatherIcon">weatherIcon</span>
-            </h2>
-            <div id="temp">Temperature:</div>
-            <div id="humidity">Humidity:</div>
-            <div id="windSpeed">Wind Speed:</div>
-            <div id="uv">UV Index:</div>
-          </div>
+          <div class="row h-50 current-weather" id="current-weather"></div>
+
           <div class="row h-50 pt-4 future-weather" id="future-weather">
             <h2 class="row p-0 m-0 fw-bold forecast-heading">
               5 Day Forecast:
