added casing for current weather display

--- a/index.html
+++ b/index.html
@@ -48,48 +48,7 @@
             <h2 class="row p-0 m-0 fw-bold forecast-heading">
               5 Day Forecast:
             </h2>
-            <div class="row row-cols-5">
-              <div class="col">
-                <div class="card">
-                  <h5 class="card-title" id="futureDate">Date</h5>
-                  <div id="futureWeatherIcon">Icon</div>
-                  <div id="futureTemp">Temp:</div>
-                  <div id="futureHumidity">Humidity:</div>
-                </div>
-              </div>
-              <div class="col">
-                <div class="card">
-                  <h5 class="card-title" id="futureDate">Date</h5>
-                  <div id="futureWeatherIcon">Icon</div>
-                  <div id="futureTemp">Temp:</div>
-                  <div id="futureHumidity">Humidity:</div>
-                </div>
-              </div>
-              <div class="col">
-                <div class="card">
-                  <h5 class="card-title" id="futureDate">Date</h5>
-                  <div id="futureWeatherIcon">Icon</div>
-                  <div id="futureTemp">Temp:</div>
-                  <div id="futureHumidity">Humidity:</div>
-                </div>
-              </div>
-              <div class="col">
-                <div class="card">
-                  <h5 class="card-title" id="futureDate">Date</h5>
-                  <div id="futureWeatherIcon">Icon</div>
-                  <div id="futureTemp">Temp:</div>
-                  <div id="futureHumidity">Humidity:</div>
-                </div>
-              </div>
-              <div class="col">
-                <div class="card">
-                  <h5 class="card-title" id="futureDate">Date</h5>
-                  <div id="futureWeatherIcon">Icon</div>
-                  <div id="futureTemp">Temp:</div>
-                  <div id="futureHumidity">Humidity:</div>
-                </div>
-              </div>
-            </div>
+            <div class="row row-cols-5" id="forecastCardDiv"></div>
           </div>
         </div>
       </div>
