--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <header class="navbar-brand">
-      <div class="display-1 fw-bold text-center">Weather Dashboard</div>
+      <div class="display-1 text-center">Weather Dashboard</div>
     </header>
     <main class="container-fluid">
       <div class="row main-row">
