attempt to link start page with main fn

--- a/start.html
+++ b/start.html
@@ -35,7 +35,7 @@
         </div>
 
         <form
-          id="cityForm"
+          id="startForm"
           class="start-form position-absolute start-50 translate-middle"
         >
           <div class="input-group mb-3 mt-3">
@@ -64,6 +64,6 @@
       integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
       crossorigin="anonymous"
     ></script>
-    <script src="assets/js/start.js"></script>
+    <script src="assets/js/script.js"></script>
   </body>
 </html>
