updated css positioning

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <header class="navbar-brand">
-      <div class="display-1 text-center">Weather Dashboard</div>
+      <div class="display-2 text-center">Weather Dashboard</div>
     </header>
     <main id="main" class="container-fluid">
       <div class="row main-row">
@@ -46,7 +46,7 @@
             <div class="current-card" id="current-weather"></div>
           </div>
 
-          <div class="row h-50 pt-4 future-weather" id="future-weather">
+          <div class="row h-50 future-weather" id="future-weather">
             <h2 class="row px-3 m-0 fw-bold forecast-heading">
               5 Day Forecast:
             </h2>
