--- a/index.html
+++ b/index.html
@@ -41,15 +41,26 @@
 
           <ul class="list-group list-group-flush" id="searchHistoryDiv"></ul>
         </div>
-        <div class="h-100 col-9" id="forecast-col">
+        <div class="h-100 col-9 position-relative" id="forecast-col">
+          <div
+            id="start-div"
+            class="start-div position-absolute top-50 start-50 translate-middle h-50 w-50"
+          >
+            <div class="start-info px-4 py-5 fs-4 text-center">
+              <div>
+                Welcome to the weather dashboard. Here you can check the current
+                weather and get a 5 day forecast for the city of your choice.
+              </div>
+              <br />
+              <div>Get started by entering a city into the search bar!</div>
+            </div>
+          </div>
           <div class="row h-50 px-3 current-weather-card">
             <div class="current-card" id="current-weather"></div>
           </div>
 
           <div class="row h-50 future-weather" id="future-weather">
-            <h2 class="row px-3 m-0 fw-bold forecast-heading">
-              5 Day Forecast:
-            </h2>
+            <div id="future-weather-heading"></div>
             <div class="row row-cols-5" id="forecastCardDiv"></div>
           </div>
         </div>
