added screenshots and updated readme.md

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             id="start-div"
             class="start-div position-absolute top-50 start-50 translate-middle h-50 w-50"
           >
-            <div class="start-info px-4 py-5 fs-4 text-center">
+            <div class="start-info p-4 fs-4 text-center">
               <div>
                 Welcome to the weather dashboard. Here you can check the current
                 weather and get a 5 day forecast for the city of your choice.
