--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
     <link href="assets/css/styles.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <header class="navbar-brand">
-      <div class="display-2 text-center">Weather Dashboard</div>
+    <header class="navbar d-flex justify-content-center">
+      <div class="display-2">Weather Dashboard</div>
     </header>
-    <main id="main" class="container-fluid">
+    <main id="main">
       <div class="row main-row">
-        <div class="h-100 col-3" id="sidebar-col">
+        <aside class="col-lg-3 col-sm-12" id="sidebar-col">
           <form id="cityForm">
             <div class="input-group mb-3 mt-3">
               <input
@@ -40,12 +40,10 @@
           </form>
 
           <ul class="list-group list-group-flush" id="searchHistoryDiv"></ul>
-        </div>
-        <div class="h-100 col-9 position-relative" id="forecast-col">
-          <div
-            id="start-div"
-            class="start-div position-absolute top-50 start-50 translate-middle h-50 w-50"
-          >
+        </aside>
+
+        <div class="col-lg-9 col-sm-12" id="forecast-col">
+          <div id="start-div" class="start-div m-5">
             <div class="start-info p-4 fs-4 text-center">
               <div>
                 Welcome to the weather dashboard. Here you can check the current
@@ -55,13 +53,14 @@
               <div>Get started by entering a city into the search bar!</div>
             </div>
           </div>
-          <div class="row h-50 px-3 current-weather-card">
-            <div class="current-card" id="current-weather"></div>
-          </div>
+          <div
+            class="px-3 current-weather-card current-card"
+            id="current-weather"
+          ></div>
 
-          <div class="row h-50 future-weather" id="future-weather">
-            <div id="future-weather-heading"></div>
-            <div class="row row-cols-5" id="forecastCardDiv"></div>
+          <div class="future-weather p-3" id="future-weather">
+            <div class="py-4" id="future-weather-heading"></div>
+            <div class="row h-50 row-cols-5" id="forecastCardDiv"></div>
           </div>
         </div>
       </div>
