extracted some functions into separate modules

--- a/index.html
+++ b/index.html
@@ -82,6 +82,6 @@
       integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
       crossorigin="anonymous"
     ></script>
-    <script src="assets/js/script.js"></script>
+    <script type="module" src="assets/utils/script.js"></script>
   </body>
 </html>
