updated styling on cards

--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@
     <header class="navbar d-flex justify-content-center">
       <div class="display-4">Weather Dashboard</div>
     </header>
+
     <main id="main">
       <div class="row p-0 m-0 main-row">
-        <aside class="col-lg-3 col-sm-12" id="sidebar-col">
+        <aside class="col-lg-3 col-sm-12 mt-4" id="sidebar-col">
           <form id="cityForm">
             <div class="input-group mb-3 mt-3 px-3">
               <input
@@ -47,7 +48,7 @@
 
         <div class="col-lg-9 col-sm-12" id="forecast-col">
           <div id="start-div" class="start-div m-5">
-            <div class="start-info p-4 fs-4 text-center">
+            <div class="start-info p-5 fs-4 text-center">
               <div>
                 Welcome to the weather dashboard. Here you can check the current
                 weather and get a 5 day forecast for the city of your choice.
