--- a/index.html
+++ b/index.html
@@ -68,6 +68,6 @@
       integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
       crossorigin="anonymous"
     ></script>
-    <script type="module" src="assets/utils/script.js"></script>
+    <script type="module" src="assets/utils/index.js"></script>
   </body>
 </html>
