--- a/results.html
+++ b/results.html
@@ -73,6 +73,6 @@
       integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
       crossorigin="anonymous"
     ></script>
-    <script type="module" src="assets/utils/script.js"></script>
+    <script type="module" src="assets/utils/results.js"></script>
   </body>
 </html>
