updated onload fn to load recent searches

--- a/index.html
+++ b/index.html
@@ -26,7 +26,17 @@
       <div class="row">
         <div class="col-8">
           <div
-            class="start-div card text-light px-4 w-50 position-absolute top-50 start-50 translate-middle"
+            class="
+              start-div
+              card
+              text-light
+              px-4
+              w-50
+              position-absolute
+              top-50
+              start-50
+              translate-middle
+            "
             id="start-div"
           >
             <div class="card-body">
@@ -68,6 +78,7 @@
       integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
       crossorigin="anonymous"
     ></script>
+    <script src="assets/utils/util.js"></script>
     <script type="module" src="assets/utils/index.js"></script>
   </body>
 </html>
