--- a/results.html
+++ b/results.html
@@ -24,7 +24,7 @@
 
     <main id="main">
       <div class="row p-0 m-0 main-row">
-        <aside class="col-lg-3 col-sm-12 mt-4" id="sidebar-col">
+        <aside class="col-lg-3 col-sm-12 mt-2" id="sidebar-col">
           <form id="cityForm">
             <div class="input-group mb-3 mt-3 px-3">
               <input
@@ -41,16 +41,15 @@
           </form>
 
           <ul
-            class="list-group list-group-flush px-2"
+            class="list-group list-group-flush px-2 m"
             id="searchHistoryDiv"
           ></ul>
         </aside>
 
         <div class="col-lg-9 col-sm-12" id="forecast-col">
-          <div
-            class="px-3 current-weather-card current-card"
-            id="current-weather"
-          ></div>
+          <div class="p-3" id="current-weather">
+            <div class="py-3" id="current-weather-heading"></div>
+          </div>
 
           <div class="future-weather p-3" id="future-weather">
             <div class="py-4" id="future-weather-heading"></div>
