added remove button to list item

--- a/results.html
+++ b/results.html
@@ -47,9 +47,7 @@
         </aside>
 
         <div class="col-lg-9 col-sm-12" id="forecast-col">
-          <div class="p-3" id="current-weather">
-            <div class="py-3" id="current-weather-heading"></div>
-          </div>
+          <div class="p-3" id="current-weather"></div>
 
           <div class="future-weather p-3" id="future-weather">
             <div class="py-4" id="future-weather-heading"></div>
