--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <header class="navbar d-flex justify-content-center">
-      <div class="display-4">Weather Dashboard</div>
+      <img src="./assets/images/logo.png" alt="logo" class="logo" />
     </header>
 
     <div class="container">
@@ -27,6 +27,8 @@
         <div class="col-8">
           <div
             class="
+              shadow-lg
+              rounded
               start-div
               card
               w-50
@@ -35,7 +37,7 @@
               start-50
               text-light
               translate-middle
-              p-2
+              mt-4
             "
             id="start-div"
           >
